--- a/Traffic-lights/build.gradle
+++ b/Traffic-lights/build.gradle
@@ -16,7 +16,10 @@ javafx {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'com.google.code.gson:gson:2.8.9' // Check for the latest version
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'  // Latest stable version of Jackson
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
 
 }
 
